idf_component_register(
    SRCS 
        "ir_transmitter" 
        "ir_sensor.cpp" 
        "ir_common.cpp"
        "real_time.cpp" 
        "button.cpp" 
        "button_handler.cpp"
        "sleep.cpp"
        "main.cpp"
    INCLUDE_DIRS 
        "${CMAKE_CURRENT_LIST_DIR}" 
        "${CMAKE_CURRENT_LIST_DIR}/external/etl/include" 
        "${CMAKE_CURRENT_LIST_DIR}/external/GSL/include"
)